Fixes on Article page title, Search button alignment, registration success message and forms.

--- a/marketing-lead2loyalty/apps-lead2loyalty/ui.apps/src/main/content/jcr_root/apps/lead2loyalty/components/content/clientlibs/lead2loyalty-homepage/css/lead2loyalty.css
+++ b/marketing-lead2loyalty/apps-lead2loyalty/ui.apps/src/main/content/jcr_root/apps/lead2loyalty/components/content/clientlibs/lead2loyalty-homepage/css/lead2loyalty.css
@@ -807,6 +807,10 @@ h5.card-title,h5.card-text {
 	list-style-type:disc;
 }
 
+.text-center P {
+	text-align: start;
+}
+
 @media screen and (min-width:769px) {
     .dropend:hover > .dropdown-menu{
         position: absolute;
